# kubeflow-mlops

./: .gitignore  pyproject.toml  s3-kubeflow-policy.json
.github/workflows/: infra.yaml  mlops.yaml  test-aws.yaml
infra/: .terraform.lock.hcl  iam.tf  main.tf  outputs.tf  tfplan  variables.tf
infra/.github/workflows/: infra.yaml
mlops/scripts/: trigger_kfp_run.py  upload_pipeline.py
pipelines/: rag_pipeline.py
pipelines/components/evaluate/: main.py
pipelines/components/preprocess/: Dockerfile  main.py
pipelines/components/train/: Dockerfile  main.py
