[tool.poetry]
name = "kubeflow-mlops"
version = "0.1.0"
description = "Production-grade Kubeflow pipelines with monitoring"
authors = ["Your Name <you@example.com>"]
license = "MIT"

# Disable package mode since this is not a PyPI package
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kfp = "2.7.0"
pandas = "^2.2"
scikit-learn = "^1.5"
joblib = "^1.4"
boto3 = "^1.35"
mlflow = "^2.16"
evidently = "^0.4.40"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2"
ipykernel = "^6.29"
pytest = "^8.2"
black = "^24.4"